--- a/index.html
+++ b/index.html
@@ -62,16 +62,24 @@
             <p>Someone can enter in the numbers they want, and press the big blue button and get results.</p>
           </li>
         </ul>
-        <div class="">
+      </div>
+    </main>
+    <footer>
+      <div class="bottom-content">
+        <div id="bottom-wrapper">
           <h2>Contact</h2>
           <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
           <p>Phone +1(111)555-1234</p>
           <p>Email email@yoursite.com</p>
         </div>
       </div>
-    </main>
-    <footer>
-
+      <div>
+        <hr>
+        <ul class="footer-content">
+          <li>Christopher Aidan Kim</li>
+          <li>Back to top</li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
