--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="bottom-content">
         <div id="bottom-wrapper">
           <h2>Contact</h2>
-          <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
+          <p class="bottom-width">If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
           <p>Phone +1(111)555-1234</p>
           <p>Email email@yoursite.com</p>
         </div>
@@ -76,8 +76,11 @@
       <div>
         <hr>
         <ul class="footer-content">
-          <li>Christopher Aidan Kim</li>
-          <li>Back to top</li>
+          <li class="footer-name">Christopher Aidan Kim</li>
+          <li class="mobile">Back to top</li>
+          <li class="desktop">Home</li>
+          <li class="desktop">Portfolio</li>
+          <li class="desktop">Contact</li>
         </ul>
       </div>
     </footer>
